--- a/TKV2025.htm
+++ b/TKV2025.htm
@@ -6,42 +6,42 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
 <meta name="Excel Workbook Frameset">
-<meta http-equiv=Content-Type content="text/html; charset=utf-8">
+<meta http-equiv=Content-Type content="text/html; charset=windows-1250">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link rel=File-List href="TKV2025_files/filelist.xml">
-<title>TKV2025</title>
+<link rel=File-List href="TKV2025_soubory/filelist.xml">
+<title>TKV2024</title>
 <![if !supportTabStrip]>
-<link id="shLink" href="TKV2025_files/sheet001.htm">
-<link id="shLink" href="TKV2025_files/sheet002.htm">
-<link id="shLink" href="TKV2025_files/sheet003.htm">
-<link id="shLink" href="TKV2025_files/sheet004.htm">
-<link id="shLink" href="TKV2025_files/sheet005.htm">
-<link id="shLink" href="TKV2025_files/sheet006.htm">
-<link id="shLink" href="TKV2025_files/sheet007.htm">
-<link id="shLink" href="TKV2025_files/sheet008.htm">
-<link id="shLink" href="TKV2025_files/sheet009.htm">
-<link id="shLink" href="TKV2025_files/sheet010.htm">
-<link id="shLink" href="TKV2025_files/sheet011.htm">
-<link id="shLink" href="TKV2025_files/sheet012.htm">
-<link id="shLink" href="TKV2025_files/sheet013.htm">
-<link id="shLink" href="TKV2025_files/sheet014.htm">
-<link id="shLink" href="TKV2025_files/sheet015.htm">
-<link id="shLink" href="TKV2025_files/sheet016.htm">
-<link id="shLink" href="TKV2025_files/sheet017.htm">
-<link id="shLink" href="TKV2025_files/sheet018.htm">
-<link id="shLink" href="TKV2025_files/sheet019.htm">
-<link id="shLink" href="TKV2025_files/sheet020.htm">
-<link id="shLink" href="TKV2025_files/sheet021.htm">
-<link id="shLink" href="TKV2025_files/sheet022.htm">
-<link id="shLink" href="TKV2025_files/sheet023.htm">
-<link id="shLink" href="TKV2025_files/sheet024.htm">
-<link id="shLink" href="TKV2025_files/sheet025.htm">
-<link id="shLink" href="TKV2025_files/sheet026.htm">
-<link id="shLink" href="TKV2025_files/sheet027.htm">
-<link id="shLink" href="TKV2025_files/sheet028.htm">
-<link id="shLink" href="TKV2025_files/sheet029.htm">
-<link id="shLink" href="TKV2025_files/sheet030.htm">
+<link id="shLink" href="TKV2025_soubory/sheet001.htm">
+<link id="shLink" href="TKV2025_soubory/sheet002.htm">
+<link id="shLink" href="TKV2025_soubory/sheet003.htm">
+<link id="shLink" href="TKV2025_soubory/sheet004.htm">
+<link id="shLink" href="TKV2025_soubory/sheet005.htm">
+<link id="shLink" href="TKV2025_soubory/sheet006.htm">
+<link id="shLink" href="TKV2025_soubory/sheet007.htm">
+<link id="shLink" href="TKV2025_soubory/sheet008.htm">
+<link id="shLink" href="TKV2025_soubory/sheet009.htm">
+<link id="shLink" href="TKV2025_soubory/sheet010.htm">
+<link id="shLink" href="TKV2025_soubory/sheet011.htm">
+<link id="shLink" href="TKV2025_soubory/sheet012.htm">
+<link id="shLink" href="TKV2025_soubory/sheet013.htm">
+<link id="shLink" href="TKV2025_soubory/sheet014.htm">
+<link id="shLink" href="TKV2025_soubory/sheet015.htm">
+<link id="shLink" href="TKV2025_soubory/sheet016.htm">
+<link id="shLink" href="TKV2025_soubory/sheet017.htm">
+<link id="shLink" href="TKV2025_soubory/sheet018.htm">
+<link id="shLink" href="TKV2025_soubory/sheet019.htm">
+<link id="shLink" href="TKV2025_soubory/sheet020.htm">
+<link id="shLink" href="TKV2025_soubory/sheet021.htm">
+<link id="shLink" href="TKV2025_soubory/sheet022.htm">
+<link id="shLink" href="TKV2025_soubory/sheet023.htm">
+<link id="shLink" href="TKV2025_soubory/sheet024.htm">
+<link id="shLink" href="TKV2025_soubory/sheet025.htm">
+<link id="shLink" href="TKV2025_soubory/sheet026.htm">
+<link id="shLink" href="TKV2025_soubory/sheet027.htm">
+<link id="shLink" href="TKV2025_soubory/sheet028.htm">
+<link id="shLink" href="TKV2025_soubory/sheet029.htm">
+<link id="shLink" href="TKV2025_soubory/sheet030.htm">
 
 <link id="shLink">
 
@@ -50,33 +50,33 @@ xmlns="http://www.w3.org/TR/REC-html40">
  var c_lTabs=30;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "PO≈òAD√ç";
- c_rgszSh[1] = "PO≈òAD√ç-DI";
- c_rgszSh[2] = "PO≈òAD√ç-DO";
- c_rgszSh[3] = "V√çTƒöZOV√â";
- c_rgszSh[4] = "V√çTƒöZOV√â-DI";
- c_rgszSh[5] = "V√çTƒöZOV√â-DO";
+ c_rgszSh[0] = "POÿADÕ";
+ c_rgszSh[1] = "POÿADÕ-DI";
+ c_rgszSh[2] = "POÿADÕ-DO";
+ c_rgszSh[3] = "VÕTÃZOV…";
+ c_rgszSh[4] = "VÕTÃZOV…-DI";
+ c_rgszSh[5] = "VÕTÃZOV…-DO";
  c_rgszSh[6] = "DEMLOVKA";
  c_rgszSh[7] = "DEMLOVKA-DI";
  c_rgszSh[8] = "DEMLOVKA-DO";
- c_rgszSh[9] = "P≈òIBYSLAV";
- c_rgszSh[10] = "P≈òIBYSLAV-DI";
- c_rgszSh[11] = "P≈òIBYSLAV-DO";
+ c_rgszSh[9] = "PÿIBYSLAV";
+ c_rgszSh[10] = "PÿIBYSLAV-DI";
+ c_rgszSh[11] = "PÿIBYSLAV-DO";
  c_rgszSh[12] = "BRTNICE";
  c_rgszSh[13] = "BRTNICE-DI";
  c_rgszSh[14] = "BRTNICE-DO";
- c_rgszSh[15] = "U¬†DEJVA";
- c_rgszSh[16] = "U¬†DEJVA-DI";
- c_rgszSh[17] = "U¬†DEJVA-DO";
- c_rgszSh[18] = "KOV√ÅRNA";
- c_rgszSh[19] = "KOV√ÅRNA-DI";
- c_rgszSh[20] = "KOV√ÅRNA-DO";
+ c_rgszSh[15] = "U†DEJVA";
+ c_rgszSh[16] = "U†DEJVA-DI";
+ c_rgszSh[17] = "U†DEJVA-DO";
+ c_rgszSh[18] = "KOV¡RNA";
+ c_rgszSh[19] = "KOV¡RNA-DI";
+ c_rgszSh[20] = "KOV¡RNA-DO";
  c_rgszSh[21] = "TAJFUN";
  c_rgszSh[22] = "TAJFUN-DI";
  c_rgszSh[23] = "TAJFUN-DO";
- c_rgszSh[24] = "MUSIC¬†CLUB";
- c_rgszSh[25] = "MUSIC¬†CLUB-DI";
- c_rgszSh[26] = "MUSIC¬†CLUB-DO";
+ c_rgszSh[24] = "MUSIC†CLUB";
+ c_rgszSh[25] = "MUSIC†CLUB-DI";
+ c_rgszSh[26] = "MUSIC†CLUB-DO";
  c_rgszSh[27] = "MADEIRA";
  c_rgszSh[28] = "MADEIRA-DI";
  c_rgszSh[29] = "MADEIRA-DO";
@@ -357,127 +357,127 @@ function fnSetActiveSheet(iSh)
  <x:ExcelWorkbook>
   <x:ExcelWorksheets>
    <x:ExcelWorksheet>
-    <x:Name>PO≈òAD√ç</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet001.htm"/>
+    <x:Name>POÿADÕ</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet001.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>PO≈òAD√ç-DI</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet002.htm"/>
+    <x:Name>POÿADÕ-DI</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet002.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>PO≈òAD√ç-DO</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet003.htm"/>
+    <x:Name>POÿADÕ-DO</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet003.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>V√çTƒöZOV√â</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet004.htm"/>
+    <x:Name>VÕTÃZOV…</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet004.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>V√çTƒöZOV√â-DI</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet005.htm"/>
+    <x:Name>VÕTÃZOV…-DI</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet005.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>V√çTƒöZOV√â-DO</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet006.htm"/>
+    <x:Name>VÕTÃZOV…-DO</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet006.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>DEMLOVKA</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet007.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet007.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>DEMLOVKA-DI</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet008.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet008.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>DEMLOVKA-DO</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet009.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet009.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>P≈òIBYSLAV</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet010.htm"/>
+    <x:Name>PÿIBYSLAV</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet010.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>P≈òIBYSLAV-DI</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet011.htm"/>
+    <x:Name>PÿIBYSLAV-DI</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet011.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>P≈òIBYSLAV-DO</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet012.htm"/>
+    <x:Name>PÿIBYSLAV-DO</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet012.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>BRTNICE</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet013.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet013.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>BRTNICE-DI</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet014.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet014.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>BRTNICE-DO</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet015.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet015.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>U DEJVA</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet016.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet016.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>U DEJVA-DI</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet017.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet017.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>U DEJVA-DO</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet018.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet018.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>KOV√ÅRNA</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet019.htm"/>
+    <x:Name>KOV¡RNA</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet019.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>KOV√ÅRNA-DI</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet020.htm"/>
+    <x:Name>KOV¡RNA-DI</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet020.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>KOV√ÅRNA-DO</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet021.htm"/>
+    <x:Name>KOV¡RNA-DO</x:Name>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet021.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>TAJFUN</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet022.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet022.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>TAJFUN-DI</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet023.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet023.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>TAJFUN-DO</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet024.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet024.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>MUSIC CLUB</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet025.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet025.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>MUSIC CLUB-DI</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet026.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet026.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>MUSIC CLUB-DO</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet027.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet027.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>MADEIRA</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet028.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet028.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>MADEIRA-DI</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet029.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet029.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
     <x:Name>MADEIRA-DO</x:Name>
-    <x:WorksheetSource HRef="TKV2025_files/sheet030.htm"/>
+    <x:WorksheetSource HRef="TKV2025_soubory/sheet030.htm"/>
    </x:ExcelWorksheet>
   </x:ExcelWorksheets>
-  <x:Stylesheet HRef="TKV2025_files/stylesheet.css"/>
+  <x:Stylesheet HRef="TKV2025_soubory/stylesheet.css"/>
   <x:WindowHeight>21240</x:WindowHeight>
   <x:WindowWidth>32767</x:WindowWidth>
   <x:WindowTopX>32767</x:WindowTopX>
@@ -491,11 +491,11 @@ function fnSetActiveSheet(iSh)
 </head>
 
 <frameset rows="*,39" border=0 width=0 frameborder=no framespacing=0>
- <frame src="TKV2025_files/sheet001.htm" name="frSheet">
- <frame src="TKV2025_files/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
+ <frame src="TKV2025_soubory/sheet001.htm" name="frSheet">
+ <frame src="TKV2025_soubory/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
  <noframes>
   <body>
-   <p>This page uses frames, but your browser doesn't support them.</p>
+   <p>Na tÈto str·nce jsou pouûity r·mce, prohlÌûeË je vöak nepodporuje.</p>
   </body>
  </noframes>
 </frameset>
